# finclaide

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.web  Makefile  README.md  docker-compose.yml  pyproject.toml  repository.yaml
.docs/ai/: current-state.md  decisions.md  next-steps.md  roadmap.md
addons/finclaide/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  apparmor.txt  build.yaml  config.yaml  nginx.ingress.conf.template  run.sh
docker/: google-service-account.placeholder.json
docs/: mcp.md  roadmap.md
frontend/: components.json  eslint.config.js  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: App.test.tsx  App.tsx  a11y.test.ts  app.css  app.d.ts  app.html  hooks.server.test.ts  hooks.server.ts  index.css  themes.css
src/finclaide/: __init__.py  __main__.py  ai.py  ai_tools.py  analytics.py  analytics_api.py  api.py  app.py  auth.py  budget_sheet.py  budget_source.py  category_filters.py  config.py  dashboard.py  database.py  errors.py  export_storage.py  frontend.py  locking.py  (+14 more)
tests/: __init__.py  conftest.py  support.py  test_ai.py  test_analytics.py  test_api.py  test_budget_import.py  test_cashflow.py  test_cashflow_rebalance.py  test_cashflow_recommendations.py  test_config.py  test_mcp_client.py  test_mcp_server.py  test_plan_exporter.py  test_plan_revisions.py  test_plan_service.py  test_reconciliation_suggestions.py  test_scenarios.py  test_scenarios_api.py  test_sheets_publisher.py  test_ynab_sync.py  workbook_builder.py
(+178 files in other folders)
